--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   fast_immutable_collections: ^7.2.1
 
   # platform APIs
+  dio: ^5.4.1
+  retrofit: ^4.1.0
 
   # misc widgets
   flutter_svg: ^2.0.0+1
@@ -45,6 +47,7 @@ dev_dependencies:
   # code generators
   freezed: ^2.3.2
   json_serializable: ^6.0.1
+  retrofit_generator: ^8.1.0
   build_runner: ^2.1.5
   flutter_sheet_localization_generator:
     git:
