--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
 
   # utopia libs
-  utopia_arch: ^0.5.0+4
+  utopia_arch: ^0.5.0+11
   utopia_rest: ^0.1.0
 
   # architecture
@@ -42,6 +42,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # testing
+  mocktail: ^1.0.3
 
   # code generators
   freezed: ^2.3.2
